src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: #131417;
  font-family: "Poppins", sans-serif;
}

.header-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  margin: 20px 0;
}

.header-logo {
  width: 50px;
  border-radius: 50%;
}

.input-container form {
  display: flex;
  justify-content: center;
}

.form-inputs-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.input-container form label {
  color: white;
  margin-right: 15px;
  width: 70px;
}

.api-key-input,
.user-message-input {
  display: flex;
  align-items: center;
}

.user-message-input textarea,
.api-key-input textarea {
  font-size: 16px;
  padding: 10px;
  border: none;
  border-radius: 8px;
  font-family: "Poppins", sans-serif;
}

.input-container button {
  font-size: 24px;
  margin-left: 12px;
  background: #0f9e7b;
  color: #131417;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  width: 50px;
}

.input-container button:hover {
  background: #0f9e7abd;
}

.loadingSpinner {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80%;
}

.loadingMessage {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  height: 50px;
}

.loadingMessage p {
  color: white;
  font-size: 20px;
}

.codepen-header {
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
}

.codepen-header-button {
  padding: 5px;
  margin: 6px;
  width: 200px;
  color: gray;
  background: #252525;
  border: 1px solid #525050;
  font-size: 16px;
}

.codepen-header button:hover,
.codepen-header select:hover {
  background: #131417;
  color: #b1b1b1;
  border: 1px solid #797878;
  cursor: pointer;
}

.codepen-header button:active {
  background: #33363f;
}

.header-button-active {
  padding: 5px;
  margin: 6px;
  width: 200px;
  color: gray;
  background: #33363f;
  border: 1px solid #525050;
  font-size: 16px;
}

.save-project-form-dropdown,
.open-project-list-dropdown {
  position: relative;
  opacity: 0;
  max-height: 0;
  transition: opacity 0.5s ease, max-height 0.5s ease;
  z-index: 1;
}

.save-project-form-dropdown.active,
.open-project-list-dropdown.active {
  opacity: 1;
  max-height: 5000px;
}

.open-project-list-dropdown.active {
  z-index: 2; /* Set a higher z-index than the other dropdown */
}

.save-project-form form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  width: 40%;
  margin: 20px auto;
}

.save-project-form form label {
  color: gray;
  flex-basis: 15%;
}

.save-project-form form input,
.save-project-form form textarea {
  padding: 5px;
  color: gray;
  background: #252525;
  border: 1px solid #525050;
  font-size: 16px;
  color: #d0d0d0;
  font-family: "Poppins", sans-serif;
  width: 100%;
  flex-basis: 85%;
}

.userid-input,
.title-input,
.description-input {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  width: 100%;
}

.save-project-form form button {
  padding: 5px;
  margin: 6px;
  width: 200px;
  color: gray;
  background: #252525;
  border: 1px solid #525050;
  font-size: 16px;
}

.save-project-form form button:hover {
  background: #131417;
  border: 1px solid #797878;
  cursor: pointer;
}

.save-project-form form button:active {
  background: #33363f;
}

.project-list-wrapper {
  color: #797878;
  width: 60%;
  margin: 0 auto 30px;
}

.project-list-header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 10px;
}

.project-list-header div {
  padding: 6px;
  text-align: center;
  font-weight: bold;
  font-size: 18px;
  color: #b1b1b1;
}

.project-list-header .spacer {
  width: 6%;
}

.project-list-wrapper ul {
  display: flex;
  flex-direction: column;
  gap: 6px;
}

.project-list-wrapper ul li {
  display: flex;
  justify-content: space-between;
  background: #252525;
  padding: 10px;
  border-radius: 6px;
  border: solid 1px #252525;
}

.project-list-wrapper ul li:hover {
  border: solid 1px #525050;
  color: #b1b1b1;
  background: #373737;
  cursor: pointer;
}

.project-list-wrapper ul li div {
  text-align: center;
}

.project-title {
  width: 20%;
}

.project-description {
  width: 50%;
}

.project-date {
  width: 20%;
}

.delete-project-button {
  width: 5%;
}

.delete-project-button:hover {
  color: #e4454b;
}

.code-boxes {
  display: flex;
  justify-content: center;
  gap: 5px;
  width: 100%;
}

.code-box {
  width: 33%;
  background: #302e2e;
  border-top: solid 4px gray;
}

.box-header {
  display: flex;
  justify-content: space-between;
}

.box-title {
  display: flex;
  padding: 10px;
}

.html-icon {
  color: #ff3c41;
}

.css-icon {
  color: #0ebeff;
}

.js-icon {
  color: #fcd000;
}

.preview-icon {
  color: #d0d0d0;
}

.box-title p {
  margin: 0 0 0 10px;
  color: gray;
}

.box-controls {
  display: flex;
  align-items: center;
  gap: 4px;
  margin-right: 6px;
}

.box-controls button {
  padding: 6px;
  height: 80%;
  font-size: 16px;
  color: gray;
  background: #252525;
  border: 1px solid #525050;
}

.box-controls button:hover {
  background: #131417;
  border: 1px solid #797878;
  cursor: pointer;
}

.box-controls button:active {
  background: #33363f;
}

.preview-title {
  background: #302e2e;
  border-top: solid 4px gray;
}

.preview {
  background: white;
  margin-top: 5px;
}

.output-frame {
  width: 100%;
  border: none;
  overflow-y: hidden;
}

